<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.savelist.SaveListFragment">

    <TextView
        android:id="@+id/tv_title_save_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacing_24"
        android:layout_marginTop="@dimen/spacing_24"
        android:gravity="center"
        android:text="@string/save_list"
        android:textColor="@color/purple"
        android:textSize="@dimen/text_size_24"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_save_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacing_24"
        android:layout_marginTop="@dimen/spacing_24"
        android:clipToPadding="false"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title_save_list" />

    <TextView
        android:id="@+id/tv_save_list_not_available"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacing_24"
        android:layout_marginTop="@dimen/spacing_24"
        android:gravity="center"
        android:text="@string/title_entertainment_not_available"
        android:textColor="@color/purple"
        android:textSize="@dimen/text_size_16"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title_save_list" />

    <Button
        android:id="@+id/bt_sign_in"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_centerInParent="true"
        android:layout_marginHorizontal="@dimen/spacing_32"
        android:layout_marginTop="@dimen/spacing_64"
        android:background="@drawable/purple_button"
        android:text="@string/sign_in"
        android:visibility="gone"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_save_list_not_available" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/gr_save_list_not_available"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="bt_sign_in, tv_save_list_not_available" />

</androidx.constraintlayout.widget.ConstraintLayout>